fix spacing to 1.15

--- a/styles.css
+++ b/styles.css
@@ -783,7 +783,7 @@ body {
 .doc-theme ol,
 .doc-theme li {
   font-size: 11pt;
-  line-height: 1.5;
+  line-height: 1.15;
 }
 
 .doc-theme a {
